Fix spacing on Windows (Chrome)

--- a/app/assets/stylesheets/history.css.scss
+++ b/app/assets/stylesheets/history.css.scss
@@ -23,6 +23,10 @@
   }
 }
 
+.bulk-edit-picker {
+  margin: 2px 0 0 !important;
+}
+
 .history-query-clear {
   position: absolute;
   right: 5px;
